# sck-core-framework

./: .gitignore  README.md  pyproject.toml  pytest.ini
core_framework/: __init__.py  _version.py  common.py  constants.py  magic.py  merge.py  prn_utils.py  status.py  time_utils.py  yamlmerge.py
core_framework/models/: __init__.py  action_details.py  action_spec.py  actions.py  aws.py  deploy_spec.py  deployment_details.py  deployspec.py  file_details.py  models.py  package_details.py  state_details.py  task_payload.py
core_framework/models/actions/: __init__.py  action.py  action_params.py  actions.py
core_framework/models/actions/params/: __init__.py  params.py
core_framework/yaml/: yaml_utils.py  yamlmerge.py
core_helper/: __init__.py  aws.py  cache.py  enclave.py  magic.py
core_logging/: __init__.py  log_classes.py  log_formatter.py  log_interface.py
core_renderer/: __init__.py  filters.py  monkeypatch.py  renderer.py
core_renderer/filters/: __init__.py  filters.py
tests/: accounts.json  accounts.ps1  app.json  apps.ps1  clients.json  clients.ps1  portfolio.json  portfolio.ps1  sample_facts.yaml  test.yaml  test_core_framework_common.py  test_core_helper_aws.py  test_core_helper_aws_grants.py  test_core_logging.py  test_core_renderer_filters.py  test_models.py  test_models_action_details.py  test_monkeypatch.py  test_prn_utils.py  test_renderer.py  test_yaml_and_json.py
tests/deployspec_json/: deployspec.json
tests/deployspec_struct/: deployspec.yaml
tests/deployspec_yaml/: deployspec.yaml
tests/templates/: test_filters.yaml.j2  test_render.yaml.j2
