[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-framework"
version = "0.0.2"
description = "Core-Framework for Core-Automation"
authors = ["James Barwick <jbarwic@me.com>"]
license = "GPL-3.0-only"
readme = "README.md"
maintainers = ["james barwick <jbarwick@me.com>"]
keywords = ["sck", "core", "aws", "cloud", "automation"]
include = ["core_framework/_version.py"]

[[tool.poetry.packages]]
include = "core_framework"

[[tool.poetry.packages]]
include = "core_renderer"

[[tool.poetry.packages]]
include = "core_logging"

[[tool.poetry.packages]]
include = "core_helper"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.35.87"
botocore = ">=1.35.87"
netaddr = "^1.3.0"
pyyaml = "^6.0.2"
pyyaml-include = "^2.1"
ruamel-yaml = "^0.18.6"   # we need to decide on a yaml library
filters = "^1.3.2"
deepdiff = "^7.0.1"
jinja2 = "^3.1.4"
jmespath = "^1.0.1"
python-slugify = "^8.0.4"

[tool.poetry-dynamic-versioning.files."core_framework/_version.py"]
persistent-substitution = true
initial-content = "  \"\"\"\n  This is the version information for core-framework module\n  \"\"\"\n  __version__ = \"0.0.0\"\n  __version_tuple__ = (0, 0, 0)\n"

[tool.poetry.group.dev.dependencies]
poetry = ">=1.8.5"
boto3-stubs = ">=1.35.87"
types-pyyaml = "^6.0.12.20240917"
types-tabulate = "^0.9.0.20240106"
flake8 = "^7.1.1"
cfn-lint = "^1.18.4"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.25.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.0.0"
rstcheck = "^6.2.4"
pylance = "^0.21.0"
