[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-framework"
version = "0.1.1"
description = "Core-Framework for Core-Automation"
authors = ["James Barwick <jbarwic@me.com>"]
license = "GPL-3.0-only"
readme = "README.md"
maintainers = ["james barwick <jbarwick@me.com>"]
keywords = ["sck", "core", "aws", "cloud", "automation"]

[[tool.poetry.packages]]
include = "core_framework"

[[tool.poetry.packages]]
include = "core_renderer"

[[tool.poetry.packages]]
include = "core_logging"

[[tool.poetry.packages]]
include = "core_helper"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.40.11"
botocore = ">=1.40.11"
netaddr = "^1.3.0"
ruamel-yaml = "^0.18.10"
filters = "^1.3.2"
deepdiff = "^7.0.1"
jinja2 = "^3.1.4"
jmespath = "^1.0.1"
python-slugify = "^8.0.4"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning.substitution]
files = ["core_framework/__init__.py"]

[tool.poetry.group.dev.dependencies]
poetry = ">=1.8.5"
boto3-stubs = ">=1.40.11"
types-tabulate = "^0.9.0.20240106"
flake8 = "^7.1.1"
cfn-lint = "^1.22.3"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.25.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.0.0"
rstcheck = "^6.2.4"
pylance = "^0.21.0"
types-netaddr = "^1.3.0.20240530"
